# silent-learner

./: Cargo.toml  LICENSE  README.md
card/: Cargo.toml
card-creator/: Cargo.toml
card-manager/: Cargo.toml
card-manager/src/: card.rs  lib.rs
card-reviewer/: Cargo.toml
card/src/: lib.rs  main.rs
card/src/cli/: add.rs  review.rs
