[package]
authors = ["JayJaySea"]
description = "Simple tool for learning, using spaced repetition"
name = "card"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["cargo"] }
card-manager = { path = "../card-manager" }
